# icosfit

./: BUILD.md  CHANGES.md  CMakeLists.txt  README.md  cygwin_release.sh
Matlab/ICOSfit/: CMakeLists.txt  Contents.m  ICOS_setup.m  ICOS_survey.m  ICOSsetup.m  PTE_TuningRate.m  PTE_add_nu_F0.m  PTE_gen.m  PTE_hack.m  PTEfixskips.m  PTEfixtemp.m  PTEtrackline.m  PTEview.m  TuningRateAnalysis.m  allan_var_plot.m  archiveICOSdata.m  average_spectra.m  average_spectra2.m  basefile.m  basefilefromresid.m  baseline_add_etalon.m  baseline_etalon_analyzer.m  baseline_optimizer.m  baseline_reinit.m  baseline_rescale.m  combineICOSout.m  combineICOSoutline.m  diagnose.m  dispfix.m  edit_ICOSfit_cfg.fig  edit_ICOSfit_cfg.m  edit_cell_cfg.fig  edit_cell_cfg.m  eng2PT.m  epsilon2_optimizer.m  etln_eval.m  etln_evalJ.m  etln_fine_tune.m  etln_fit.fig  etln_fit.m  (+73 more)
Matlab/ICOSfit/QT/: CMakeLists.txt  UpdateQT.sh  Update_isovals.pl  parse_iso_meta.pl
Matlab/ICOSfit/synth/: ICOSfit_baseline.m  QT.m  synth_PwrIn.m  synth_set.m  synthetic.m
Matlab/ICOSfit/synth/test/: Cell_Config.m  ICOSfit_Config.m  waves.m
Matlab/arp-das/: CMakeLists.txt  addzoom.m  binavg.m  dft.m  fastavg.m  findinpath.m  fmedianf.m  getrun.m  getrundir.m  isdigit.m  lightspeed.m  matchx.m  nanmean.m  normalize.m  nsubplot.m  time2d.m
icosfit/: .gitignore  CHANGES  Doxyfile  README.src  humdev.for  todo
icosfit/QT/: survey.m  surveys.m
icosfit/cppsrc/: CMakeLists.txt  Ccomment.c  Cint.c  FINL.h  HEAD.h  ICOSfit.h  ICOSmain.c  INIT.h  Makefile  QTdata.c  ScanProc.h  Strings.h  VoidPtr.h  attrmain.c  attrpredef.h  auxEOF.c  auxNUL.c  auxScanEOL.c  clp.c  clp.h  clpintf.c  clpintf.h  clplib.c  clplib.h  config.h  coord.c  coord.h  csm.c  csm.h  deftbl.c  deftbl.h  dflteot.c  dfltrepar.c  driver.c  eliproto.h  endian.h  envmod.c  envmod.h  err.c  err.h  (+52 more)
icosfit/elisrc/: .gitignore  ICOSfit.h  ICOSmain.c  Makefile  Makefile.tail  Odinfile  Odinfile.in  config.h  evalorder.c  fitfunc.c  funcabs.c  funceval.c  funceval.h  funcline.c  funcnoskew.c  funcparam.c  funcskew.c  gen_cppsrc.sh  global.c  global.h  humdev.c  icosfit.FINL.phi  icosfit.HEAD.phi  icosfit.INIT.phi  icosfit.clp  icosfit.con  icosfit.gla  icosfit.lido  icosfit.pdl  icosfit.specs  levmar_func.c  levmar_func.h  mlf.c  mlf.h  molwt.c  nl.h  nl_error.c  nl_verr.c  nldbg.c  ptread.c  (+6 more)
levmar-2.6/: CMakeLists.txt  Makefile
setup/: CMakeLists.txt  icosfit_matlab_setup.sh.in  icosfit_survey
